# fiware-keystone-spassword

./: .gitignore  .testr.conf  .travis.yml  ChangeLog  Dockerfile  README.md  Vagrantfile  docker-compose.yml  get_version_string.sh  keystone-spassword.spec  package-keystone-spassword.sh  requirements.txt  setup.cfg  tox.ini
.github/fiware/: image-clone.sh
.github/workflows/: python-tests.yml
docker/: 27e647c0fad4_initial_version.py  Dockerfile  Dockerfile_mitaka  Dockerfile_newton  api_auth.patch  api_role_assignments.patch  apis.patch  application.patch  auth_controllers.patch  auth_plugins_token.patch  backends.patch  common.patch  common_controller.patch  common_render_token.patch  core.patch  core_auth.patch  cracklib-devel-2.9.6-15.el8.x86_64.rpm  cracklib-devel-2.9.6-27.el9.x86_64.rpm  create_post_launchconfig.sh  docker-compose.yml  expand_initial_migration.patch  keystone-all  keystone-entrypoint.sh  keystone_conf.sh  keystone_scim.sh  keystone_spassword.sh  manager.patch  postlaunchconfig.sh  postlaunchconfig_update.sh  projects.patch  python2-qpid-proton-0.34.0-2.el7.x86_64.rpm  qpid-proton-c-0.34.0-2.el7.x86_64.rpm  role_policy.patch  sql_ldap.py  token_model.patch  token_provider.patch
docs/: DOCKER.md  add_admin_group.ldif  change_role_asignment_group.sh  configure_keystone_ldap.sh  group.ldif  id_group_ldap.py  iotp_ldap.md  iotp_saml_idp.md  keystone.smartcity.conf  keystone_ldap_schema.py  second_factor_auth.md  sql_ldap.py  user.ldif
keystone_spassword/tests/: test_2fa_api.py  test_spassword.py
scripts/bootstrap/: centos65.sh
(+19 files in other folders)
