[metadata]
name = keystone_spassword
version = 1.21.0
summary = Keystone SPASSWORD extension
description-file =
    README.md
author = Telefonica I+D
author-email = alvaro.vegagarcia@telefonica.com
home-page = https://github.com/telefonicaid
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    keystone_spassword

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

# NOTE(dstanek): Uncomment the [pbr] section below and remove the ext.apidoc
# Sphinx extension when https://launchpad.net/bugs/1260495 is fixed.
[pbr]
warnerrors = True
